--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,4 @@
-#:schema node_modules/wrangler/config-schema.json
-name = "sublink-worker"
+name = "scbzhuan"
 main = "src/index.js"
 compatibility_date = "2024-07-24"
 compatibility_flags = ["nodejs_compat"]
