--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,5 @@
-name = "sublink-worker"
+# wrangler.toml
+name = "dyez"
 main = "src/index.js"
 compatibility_date = "2024-07-24"
 compatibility_flags = ["nodejs_compat"]
